--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-  "name": "Forsikringskalkyle",
-  "short_name": "Kalkyle",
-  "start_url": "/",
+  "name": "Min Pris",
+  "short_name": "Min Pris",
+  "start_url": "/min-pris-ai/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0d47a1",
-  "description": "Kalkyle for riving, rengjøring og forsikringsarbeid",
   "icons": [
     {
       "src": "icons/192.jpeg",
