--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
-Men {
-  "routes": [
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/api/(.*)", "dest": "/api/$1" }
-  ]
+{
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs20.x"
+    }
+  }
 }
